--- a/styles/contato.css
+++ b/styles/contato.css
@@ -3,11 +3,11 @@
     padding: 1em;
 }
 
-.contato__titulo 
+.contato__titulo,
 .contato__texto {
-   background: var(--azul-degrade);
-   -webkit-background-clip: text;
-   -webkit-text-fill-color: transparent;
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     background-clip: text;
 }
 
@@ -17,8 +17,8 @@
 }
 
 .contato__texto {
-    font-size: 16px;
     font-weight: 300;
+    margin: 1em 0;
 }
 
 .contato__email {
@@ -26,4 +26,12 @@
     border: 1px solid var(--azul);
     border-radius: 24px;
     width: 90%;
+    color: var(--azul);
+}
+
+.contato__email::placeholder {
+    font-family: var(--fonte-principal);
+    color: var(--azul);
+    background: url("../img/Email.svg") no-repeat;
+    padding-left: 2em;
 }
