--- a/styles/banner.css
+++ b/styles/banner.css
@@ -8,31 +8,56 @@
 .banner__titulo {
     font-size: 18px;
     font-weight: 700;
-    font-family: var(--font-menu);
 }
 
 .banner__texto {
     font-weight: 500;
     margin: 1em 0;
-    font-family: var(--font-menu);
 }
 
 .banner__pesquisa {
-    border-radius: 24px;
+    background-color: transparent;
     border: 1px solid var(--branco);
     color: var(--branco);
-    background-color: transparent;
+    border-radius: 24px;
     padding: 1em;
     width: 100%;
-   
 }
 
 .banner__pesquisa::placeholder {
-    font-family: var(--font-menu);
+    font-family: var(--fonte-principal);
     font-size: 14px;
     font-weight: 400;
     text-align: center;
     color: var(--branco);
-    background: url('../img/Vector.svg') no-repeat;
+    background: url("../img/Lupa.svg") no-repeat;
     background-position: 1em;
+}
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .banner__pesquisa {
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 12em;
+    }
+
+    .banner {
+        padding: 6em 0;
+    }
 }
